added comments changing div classes to id classes

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         </section>
     </id>
 
+    <!-- Changed the benefits div class to an id class-->
+    <!-- Changed the div ids to section ids using the section semantic element -->
     <id class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
